--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@
 
 .content {
   padding: 20px;
+  font-weight: 100px;
 }
  
 
@@ -92,5 +93,5 @@
   height: 40%;
   overflow: auto;
   /* background-color: rgb(255, 255, 255); */
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: gray
 }
